Fix mobile ads on iPhone

--- a/src/scss/plyr-ads.scss
+++ b/src/scss/plyr-ads.scss
@@ -1,14 +1,15 @@
 
+.plyr--ready {
+    position: relative;
+}
+
 .plyr-ads {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    width: 100%;
-    height: 100%;
     z-index: 10;
-    overflow: hidden;
 
     &__skip-button {
         position: absolute;
